--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -48,34 +48,35 @@ body {
     display: grid;
     grid-template-columns: auto auto auto auto;
 }
+
 /* --------------------------------------------------------------------  404 and 500 error page*/
 
-#error-404-container{
-  width: 50%;
-  margin: 10px auto;
+#error-404-container {
+    width: 50%;
+    margin: 10px auto;
 }
 
 .card img {
-  width: 400px;
-  margin: auto;
+    width: 400px;
+    margin: auto;
 }
 
 .links_for_404 {
-  font-size: 10px;
-  background-color: var(--orange-pantone);
-  padding: 15px 32px;
-  font-size: 16px;
-  cursor: pointer;
-  display: block;
-  width: auto;
-  margin: 50px auto;
-  color: var(--white);
-  text-decoration: none;
+    font-size: 10px;
+    background-color: var(--orange-pantone);
+    padding: 15px 32px;
+    font-size: 16px;
+    cursor: pointer;
+    display: block;
+    width: auto;
+    margin: 50px auto;
+    color: var(--white);
+    text-decoration: none;
 }
 
 .links_for_404:hover {
-  background-color: var(--orange-pantone-lighter);
-  color: var(--white);
+    background-color: var(--orange-pantone-lighter);
+    color: var(--white);
 }
 
 /* -------------------------------------------------------------------- Admin section */
@@ -317,68 +318,93 @@ body {
     background-color: #f44336;
 }
 
-/* ------------------------------------Cart */
-.cart{
+
+/* --------------------------------------------------------------------- Cart */
+.cart {
     position: relative;
 }
 
-.site-default-color{
-    color:var(--orange-pantone)
+.site-default-color {
+    color: var(--orange-pantone)
 }
 
-.cart-item-detail{
+.cart-item-detail {
     background-color: var(--white);
     border-radius: 10px;
     padding: 20px;
     margin: 10px;
+    height: fit-content;
 }
-.cart-detail-img{
-    width:150px;
+
+.cart-detail-img {
+    width: 150px;
 }
+
 .cart-detail-header,
-.cart-detail-subcontainer{
+.cart-detail-subcontainer {
     display: grid;
     grid-template-columns: auto auto auto auto auto auto auto;
     column-gap: 20px;
 }
 
-.cart-icon-x{
+.cart-icon-x {
     color: red;
+    font-size: 35px;
+    margin-top: 3px;
 }
-.cart-icon-x:hover{
+
+.cart-icon-x:hover {
     color: rgb(243, 136, 136);
     cursor: pointer;
 }
-.cart-default-color{
-    color:var(--orange-pantone);
+
+.cart-default-color {
+    color: var(--orange-pantone);
     font-size: 20px;
 }
-.cart-default-color:hover{
-    color:#f58758 ;
+
+.cart-default-color:hover {
+    color: #f58758;
     cursor: pointer;
 }
 
-.cart-price-summary{
+.cart-price-summary {
     border-radius: 10px;
     padding: 20px;
-    width:300px;
+    width: 300px;
     background-color: var(--white);
-    float: left;
     margin: 10px;
-}
-.float-right{
-    float:right;
-}
-.link-side{
-    width: 100%;
-}
-.cart-container{
-    overflow: hidden;
-    padding-left:35px;
-    display: grid;
-    grid-template-columns: auto auto;
+    height: fit-content;
 }
 
+
+.float-right {
+    float: right;
+}
+
+.link-side {
+    width: 100%;
+}
+
+.cart-container {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-areas: 'cart-item-detail' 'cart-price-summary';
+}
+
+.cart-input {
+    width: 65px;
+}
+
+.update-cart-btn {
+    color: var(--orange-pantone);
+    background-color: var(--white);
+    font-size: 10px;
+}
+
+.update-cart-btn:hover {
+    border: 2px solid var(--orange-pantone);
+}
 
 /* ----------------Animation for home*/
 @keyframes typing {
@@ -442,14 +468,12 @@ body {
 .detail-price {
     font-family: var(--font);
     font-size: 20px;
-    ;
-
 }
 
 .item-detail {
     padding: 1.5rem;
     width: 420px;
-    height: 540px;
+    height: fit-content;
 }
 
 .photos {
@@ -625,10 +649,11 @@ body {
 }
 
 
-.form_detail_btn{
-display: grid;
-grid-template-columns: auto auto;
+.form_detail_btn {
+    display: grid;
+    grid-template-columns: auto auto;
 }
+
 /* -------------------------------------------------------------------- accounts signup/signin etc */
 
 .user_card {
@@ -737,30 +762,30 @@ ul.socialaccount_providers {
     clear: both;
     overflow: hidden;
     margin-bottom: 150px;
-  }
-  
-  .contact_form {
+}
+
+.contact_form {
     width: 500px;
     height: 500px;
     margin-top: 78px;
     margin: auto;
-  }
-  
-  .contact_word {
+}
+
+.contact_word {
     font-size: 80px;
     font-family: "noticia text", serif;
     color: var(--orange-pantone-lighter);
     text-align: center;
     margin-top: 100px;
-  }
-  
-  .contact_form p {
+}
+
+.contact_form p {
     color: var(--orange-pantone);
     text-align: center;
-  }
-  
-  .contact_form .input-field[type=text],
-  .input-field[type=email] {
+}
+
+.contact_form .input-field[type=text],
+.input-field[type=email] {
     width: 100%;
     padding: 12px 20px;
     margin: 2px 0;
@@ -771,9 +796,9 @@ ul.socialaccount_providers {
     font-size: 15px;
     height: 40px;
     border: none;
-  }
-  
-  .contact_form textarea {
+}
+
+.contact_form textarea {
     width: 100%;
     height: 200px;
     padding: 5px 19px;
@@ -785,48 +810,49 @@ ul.socialaccount_providers {
     font-size: 15px;
     resize: none;
     border: none;
-  }
-  
-  .contact_form input[type=text]:hover,
-  .contact_form input[type=email]:hover,
-  .contact_form textarea:hover {
+}
+
+.contact_form input[type=text]:hover,
+.contact_form input[type=email]:hover,
+.contact_form textarea:hover {
     border: 1px solid var(--black);
-  }
-  
-  
-  textarea::placeholder {
+}
+
+
+textarea::placeholder {
     color: var(--black);
     font-family: "open sans", sans-serif;
     font-size: 15px;
-  
-  }
-  
-  ::placeholder {
+
+}
+
+::placeholder {
     color: var(--black);
     font-family: "open sans", sans-serif;
     font-size: 15px;
-  }
-  
-  
-  .form_btn {
+}
+
+
+.form_btn {
     float: right;
     border: none;
     font-size: 14px;
     color: var(--Granite-grey);
     animation: change-btn-form-color 0.5s alternate infinite;
-  }
-  
-  .form_btn:hover {
+}
+
+.form_btn:hover {
     color: var(--orange-pantone);
     cursor: pointer;
-  }
-  
-  /* form animation for btn */
-  @keyframes change-btn-form-color {
-    0%{
+}
+
+/* form animation for btn */
+@keyframes change-btn-form-color {
+    0% {
         color: var(--black);
     }
-    100%{
+
+    100% {
         color: var(--orange-pantone);
     }
 }
@@ -837,27 +863,27 @@ ul.socialaccount_providers {
     justify-content: center;
     text-align: center;
     margin-top: 100px;
-  }
-  
-  .sub-container {
+}
+
+.sub-container {
     max-width: 800px;
     height: auto;
     border-radius: 5px;
     padding: 15px;
-  }
+}
 
-  .sub-container p {
+.sub-container p {
     font-size: 18px;
     font-family: "noticia text", serif;
     color: var(--orange-pantone);
-  }
-  
-  .sub-container h1 {
+}
+
+.sub-container h1 {
     font-family: "noticia text", serif;
     color: var(--orange-pantone);
-  }
-  
-  .btn_email_sent {
+}
+
+.btn_email_sent {
     background-color: var(--orange-pantone);
     border: none;
     color: var(--white);
@@ -866,16 +892,16 @@ ul.socialaccount_providers {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-  }
-  
-  .btn_email_sent:hover {
+}
+
+.btn_email_sent:hover {
     color: var(--white);
     background-color: var(--orange-pantone-lighter);
-  }
-  
-  .email_page-wrapper {
+}
+
+.email_page-wrapper {
     text-decoration: none;
-  }
+}
 
 /* -------------------------------------------------------------------- Media queries */
 
@@ -884,6 +910,7 @@ ul.socialaccount_providers {
     .home-banner h2 {
         font-size: 100px;
     }
+    
 
     .overview {
         width: 70%;
@@ -932,10 +959,11 @@ ul.socialaccount_providers {
         display: grid;
         grid-template-columns: auto auto auto auto;
     }
-    .cart-container{
+
+    .cart-container {
         grid-template-columns: auto;
     }
-    
+
 }
 
 /* medium devices (988px and down) */
@@ -982,11 +1010,11 @@ ul.socialaccount_providers {
         width: 700px;
     }
 
-   /* 404 error */
-  .card img {
-    width: 100%;
-    margin: auto;
-  }
+    /* 404 error */
+    .card img {
+        width: 100%;
+        margin: auto;
+    }
 
 
 
@@ -1028,33 +1056,33 @@ ul.socialaccount_providers {
         width: 400px;
     }
 
-      /* admin form */
-      .admin-form {
+    /* admin form */
+    .admin-form {
         width: 90%;
     }
 
-  /* contact page */
+    /* contact page */
 
-  .contact_word {
-    font-size: 44px;
-    float: none;
-    margin: auto;
-    margin-top: 100px;
-    padding-left: 15px;
-  }
+    .contact_word {
+        font-size: 44px;
+        float: none;
+        margin: auto;
+        margin-top: 100px;
+        padding-left: 15px;
+    }
 
-  .contact_form {
-    width: 345px;
-    float: none;
-    margin: 29px auto;
-    overflow: hidden;
-  }
+    .contact_form {
+        width: 345px;
+        float: none;
+        margin: 29px auto;
+        overflow: hidden;
+    }
 
-  .form_btn {
-    border: none;
-    font-size: 14px;
-    font-weight: bold;
-  }
+    .form_btn {
+        border: none;
+        font-size: 14px;
+        font-weight: bold;
+    }
 
 
 
@@ -1164,16 +1192,18 @@ ul.socialaccount_providers {
 /* very Small devices (phones, 373px and down) */
 @media only screen and (max-width: 373px) {
     .contact_form {
-      width: 100%;
-      padding: 10px;
+        width: 100%;
+        padding: 10px;
     }
-  
+
     .contact_word {
-      font-size: 30px;
+        font-size: 30px;
     }
-    .cart-price-summary{
-        width:100%;
-        float: none;
-    }
-  
-  }
+
+    .cart-price-summary {
+        width: 100%;
+    } 
+
+
+
+}
