--- a/templates/excursions/excursion_details.html
+++ b/templates/excursions/excursion_details.html
@@ -4,6 +4,17 @@
 {% block content %}
 <section>
     <div class="detail-container">
+        <!-- flass success message -->
+        <div class="message">
+            {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-success" role="alert">
+                {{message}}
+            </div>
+            {% endfor %}
+            {% endif %}
+        </div>
+
         <h1 class="detail-title">{{excursions.title}}</h1>
         <div class="item-detail-and-image-container">
             <!-- main image -->
@@ -46,39 +57,43 @@
                         <!-- number of adults -->
                         <div class="form-group mt-3">
                             <label for="id_adult_qty">Adult (11-85 years old)</label>
-                            <input type="number" class="form-control" id="id_adult_qty" name="adult_qty" value="1" min="1" max="99" data-item_id="{{excursions.id}}" required>
+                            <input type="number" class="form-control" id="id_adult_qty" name="adult_qty" value="1"
+                                min="1" max="99" data-item_id="{{excursions.id}}" required>
                         </div>
                         <!-- number of childrens -->
                         <div class="form-group mt-3">
                             <label for="id_child_qty"> Child (3 - 10 years old)</label>
-                            <input type="number" class="form-control" id="id_child_qty" name="child_qty" value="0" min="0" max="99" >
+                            <input type="number" class="form-control" id="id_child_qty" name="child_qty" value="0"
+                                min="0" max="99">
                         </div>
                         <!-- pick up info -->
                         <div class="form-group mt-3">
                             <label for="inputCity">Place to be pick up</label>
-                            <input type="text" class="form-control" id="inputCity" name="place_pickup" maxlength="26" required>
+                            <input type="text" class="form-control" id="inputCity" name="place_pickup" maxlength="26"
+                                required>
                         </div>
-                         <!-- hidden input to get the url-->
+                        <!-- hidden input to get the url-->
                         <input type="hidden" name="redirect_url" value="{{request.path}}">
-                          <!-- hidden input for the price-->
+                        <!-- hidden input for the price-->
                         <input type="hidden" name="price" value="{{excursions.Price}}">
 
                         <!-- form btn -->
                         <div class="form_detail_btn">
-                              <!-- go back to keep shopping btn -->
-                        <div class="form-group mt-3 p-2">
-                            <a href="{% url 'excursions' %}" class="user_button  my_hover btn">
-                                <span class="icon">
-                                    <i class="fas fa-chevron-left"></i>
-                                </span>
-                                <span class="keep-shoping"> Keep Shopping</span>
-                            </a>
-                        </div>
-                        
-                         <!-- Submit button -->
-                        <div class="form-group mt-3 p-2">
-                            <button type="submit" class="user_button my_hover btn add-cart"><i class="fa-solid fa-cart-plus"></i> Add to cart</button>
-                        </div>
+                            <!-- go back to keep shopping btn -->
+                            <div class="form-group mt-3 p-2">
+                                <a href="{% url 'excursions' %}" class="user_button  my_hover btn">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="keep-shoping"> Keep Shopping</span>
+                                </a>
+                            </div>
+
+                            <!-- Submit button -->
+                            <div class="form-group mt-3 p-2">
+                                <button type="submit" class="user_button my_hover btn add-cart"><i
+                                        class="fa-solid fa-cart-plus"></i> Add to cart</button>
+                            </div>
 
                         </div>
                 </form>
@@ -95,17 +110,6 @@
     <!-- Reviews -->
     <h5 class="review-title">Customer reviews: {{excursions.reviews.all.count}}</h5>
     <hr>
-
-    <!-- flass success message -->
-    <div class="message">
-        {% if messages %}
-        {% for message in messages %}
-        <div class="alert alert-success" role="alert">
-            {{message}}
-        </div>
-        {% endfor %}
-        {% endif %}
-    </div>
 
 
     {% if request.user.is_authenticated %}
