--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -4,94 +4,81 @@
 {% block content %}
 
 <section>
-    <div class="container mb-2">
-        <h1 class="text-center mt-5">Checkout</h1>
-        <div class="row">
-            <!-- what is in the cart -->
-            <div class="col-md-4 order-md-2 mb-4">
-              <h4 class="d-flex justify-content-between align-items-center mb-3">
-                <span class="text-muted">Your cart</span>
-                <span class="badge bg-site-color badge-pill">{{cart_items| length}}</span>
-              </h4>
-              <ul class="list-group mb-3">
-                {% for item in cart_items %}
-                <li class="list-group-item d-flex justify-content-between lh-condensed">
-                  <div>
-                    <h6 class="my-0">{{item.excursion.title|slice:":25"|title}}</h6>
-                    <div class="pt-3">
-                        <small><img class="cart-detail-img" src="{{item.excursion.main_image.url}}"
-                            alt="{{item.excursion.image_name}}"></small>
-                    </div>
-                    {% if item.values.adult_qty %}
-                    <div class="pt-2">Adult: {{item.values.adult_qty}}</div>
-                    {% endif%}
+  <div class="container mb-2">
+    <h1 class="text-center mt-5">Checkout</h1>
+    <div class="row">
+      <!-- what is in the cart -->
+      <div class="col-md-4 order-md-2 mb-4">
+        <h4 class="d-flex justify-content-between align-items-center mb-3">
+          <span class="text-muted">Your cart</span>
+          <span class="badge bg-site-color badge-pill">{{cart_items| length}}</span>
+        </h4>
+        <ul class="list-group mb-3">
+          {% for item in cart_items %}
+          <li class="list-group-item d-flex justify-content-between lh-condensed">
+            <div>
+              <h6 class="my-0">{{item.excursion.title|slice:":25"|title}}</h6>
+              <div class="pt-3">
+                <small><img class="cart-detail-img" src="{{item.excursion.main_image.url}}"
+                    alt="{{item.excursion.image_name}}"></small>
+              </div>
+              {% if item.values.adult_qty %}
+              <div class="pt-2">Adult: {{item.values.adult_qty}}</div>
+              {% endif%}
 
-                    {% if item.values.child_qty %}
-                    <div class="pt-2">Child: {{item.values.child_qty}}</div>
-                    {% endif%}
-                    <div clas="pt-2">
-                       Date: {{item.values.excursion_date}}
-                    </div>
-                  </div>
-
-                  <span class="text-muted">£{{item.subTotal | floatformat:2}}</span>
-                </li>
-                {% endfor %}
-                <li class="list-group-item d-flex justify-content-between">
-                  <span>Total (GB)</span>
-                  <strong>£{{total | floatformat:2}}</strong>
-                </li>
-              </ul>
+              {% if item.values.child_qty %}
+              <div class="pt-2">Child: {{item.values.child_qty}}</div>
+              {% endif%}
+              <div clas="pt-2">
+                Date: {{item.values.excursion_date}}
+              </div>
             </div>
 
-            <!-- card pytments infomation -->
-            <div class="col-md-8 order-md-1">
-              <h4 class="mb-3">Contact info</h4>
-              <form class="needs-validation">
-                <div class="row">
-                  <div class="col-md-6 mb-3">
-                    <label for="full_name">Full name *</label>
-                    <input type="text" class="form-control" id="full_name" placeholder="Ellon Musk" required>
-                  </div>
+            <span class="text-muted">£{{item.subTotal | floatformat:2}}</span>
+          </li>
+          {% endfor %}
+          <li class="list-group-item d-flex justify-content-between">
+            <span>Total (GB)</span>
+            <strong>£{{total | floatformat:2}}</strong>
+          </li>
+        </ul>
+      </div>
 
-                  <div class="col-md-6 mb-3">
-                    <label for="Phone_number">Phone number</label>
-                    <input type="text" class="form-control" id="Phone_number" placeholder="Phone number" required>
-                  </div>
-                </div>
-                <hr class="mb-4">
-        
-                <h4 class="mb-3">Payment</h4>
-                <div class="row">
-                  <div class="col-md-6 mb-3">
-                    <label for="cc-name">Name on card</label>
-                    <input type="text" class="form-control" id="cc-name" placeholder="E musk " required>
-                    <small class="text-muted">Full name as displayed on card</small>
-                  </div>
-                  <div class="col-md-6 mb-3">
-                    <label for="cc-number">Credit card number</label>
-                    <input type="text" class="form-control" id="cc-number" placeholder="1234 5678 1234 6687" required>
-                    <div class="invalid-feedback">
-                      Credit card number is required
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-3 mb-3">
-                    <label for="cc-expiration">Expiration</label>
-                    <input type="text" class="form-control" id="cc-expiration" placeholder="11 / 35" required>
-                  </div>
-                  <div class="col-md-3 mb-3">
-                    <label for="cc-cvv">CVV</label>
-                    <input type="text" class="form-control" id="cc-cvv" placeholder="689" required>
-                  </div>
-                </div>
-                <hr class="mb-4">
-                <button class="btn user_button_sm my_hover btn-lg btn-block" type="submit">Pay £{{total | floatformat:2}}</button>
-              </form>
+      <!-- card pytments infomation -->
+      <div class="col-md-8 order-md-1">
+        <h4 class="mb-3">Contact info</h4>
+        <form class="needs-validation">
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <label for="full_name">Full name *</label>
+              <input type="text" class="form-control" id="full_name" placeholder="Ellon Musk" required>
+            </div>
+
+            <div class="col-md-6 mb-3">
+              <label for="Phone_number">Phone number</label>
+              <input type="text" class="form-control" id="Phone_number" placeholder="Phone number" required>
             </div>
           </div>
-    </div>
-</section>
+          <hr class="mb-4">
 
+          <h4 class="mb-3">Payment</h4>
+          <div class="row">
+            <div class="col-md-12 mb-3">
+              <!-- A Stripe card element will go here -->
+              <div class="mb-3" id="card-element"></div>
+              <!-- Used to display form errors -->
+              <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+            </div>
+          </div>
+          <button class="btn user_button_sm my_hover btn-lg btn-block" type="submit">Pay £{{total|floatformat:2}}</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
+{{ stripe_public_key|json_script:"id_stripe_public_key" }}
+{{ client_secret|json_script:"id_client_secret" }}
+ <!-- stripe -->
+<script src="https://js.stripe.com/v3/"></script>
+<script src="{% static 'js/stripe_elements.js' %}"></script>
 {% endblock content %}
