--- a/static/css/style.css
+++ b/static/css/style.css
@@ -79,6 +79,58 @@ body {
     color: var(--white);
 }
 
+
+/* -------------------------------------------------------------------- successful payment page */
+
+
+.payment_header {
+    background-color: var(--orange-pantone);
+    padding: 20px;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.check {
+    margin: 0px auto;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    background: #fff;
+    text-align: center;
+}
+
+.check i {
+    vertical-align: middle;
+    line-height: 50px;
+    font-size: 30px;
+}
+
+.content {
+    text-align: center;
+    background-color: white;
+    padding: 20px;
+}
+
+.content a {
+    width: 200px;
+    height: 35px;
+    color: #fff;
+    border-radius: 30px;
+    padding: 5px 10px;
+    background: rgba(255, 102, 0, 1);
+    transition: all ease-in-out 0.3s;
+}
+
+.content a:hover {
+    text-decoration: none;
+    background: #000;
+}
+
+.content h1 {
+    font-size: 25px;
+    padding-top: 25px;
+}
+
+
 /* -------------------------------------------------------------------- Admin section */
 
 .card-admin-wrapper {
@@ -327,7 +379,8 @@ body {
 .site-default-color {
     color: var(--orange-pantone)
 }
-.bg-site-color{
+
+.bg-site-color {
     background-color: var(--orange-pantone);
 }
 
@@ -408,22 +461,27 @@ body {
 .update-cart-btn:hover {
     border: 2px solid var(--orange-pantone);
 }
-.visa{
-    color:navy;
-}
-.discover{
-    color:orange;
+
+.visa {
+    color: navy;
 }
 
-.amex{
-    color:blue;
+.discover {
+    color: orange;
 }
 
-.mastercard{
-    color:red;
+.amex {
+    color: blue;
 }
 
-.visa, .discover, .amex, .mastercard{
+.mastercard {
+    color: red;
+}
+
+.visa,
+.discover,
+.amex,
+.mastercard {
     font-size: 35px;
 }
 
@@ -453,25 +511,25 @@ body {
 
 .StripeElement,
 .stripe-style-input {
-  box-sizing: border-box;
-  height: 40px;
-  padding: 10px 12px;
-  border: 1px solid transparent;
-  border-radius: 0px;
-  background-color: white;
-  box-shadow: 0 1px 3px 0 #e6ebf1;
-  -webkit-transition: box-shadow 150ms ease;
-  transition: box-shadow 150ms ease;
+    box-sizing: border-box;
+    height: 40px;
+    padding: 10px 12px;
+    border: 1px solid transparent;
+    border-radius: 0px;
+    background-color: white;
+    box-shadow: 0 1px 3px 0 #e6ebf1;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
 }
 
 .StripeElement--focus,
 .stripe-style-input:focus,
 .stripe-style-input:active {
-  box-shadow: 0 1px 3px 0 #cfd7df;
+    box-shadow: 0 1px 3px 0 #cfd7df;
 }
 
 .StripeElement--webkit-autofill {
-  background-color: #fefde5 !important;
+    background-color: #fefde5 !important;
 }
 
 .stripe-style-input::placeholder {
@@ -965,7 +1023,7 @@ textarea::placeholder {
     .home-banner h2 {
         font-size: 100px;
     }
-    
+
 
     .overview {
         width: 70%;
@@ -1257,7 +1315,7 @@ textarea::placeholder {
 
     .cart-price-summary {
         width: 100%;
-    } 
+    }
 
 
 
