--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,8 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
                     {% if not user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false"> My account
+                            aria-expanded="false">
+                            <i class="fa-solid fa-user"></i> My account
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{% url 'account_login' %}"><i
@@ -78,11 +79,8 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
                     </li>
                     {% else %}
                     <li class="nav-item dropdown">
-
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false"> <i class="fa-solid fa-user"></i> Hi {{user|title}}
-                        </a>
-
+                            aria-expanded="false"> <i class="fa-solid fa-user"></i> Hi {{user|title}}</a>
 
                         <ul class="dropdown-menu">
                             <li>
