--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -43,7 +43,7 @@
             </li>
             {% else %}
             <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Previous</a>
+                <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
             </li>
             {% endif %}
 
@@ -75,7 +75,7 @@
                 </li>
                 {% else %}
                 <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Next</a>
+                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Next</a>
                 </li>
                 {% endif %}
         </ul>
