--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -54,7 +54,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="links-container">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}"><i class="fa-solid fa-house-user"></i></i>
+                        <a class="nav-link" href="{% url 'home' %}"><i class="fa-solid fa-house-user"></i>
                             Home</a>
                     </li>
                     <!-- Sort by -->
@@ -64,8 +64,10 @@
                             <i class="fa-solid fa-filter"></i>Sort by
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{% url 'newest_result' %}"></i>Sort by newest</a>
+                            <li>
+                                <a class="dropdown-item" href="{% url 'newest_result' %}">Sort by newest</a>
                             </li>
+
                             <li><a class="dropdown-item" href="{% url 'oldest_result' %}">Sort by Oldest</a>
                             </li>
                             <li><a class="dropdown-item" href="{% url 'filter_by_ascend' %}">Price (low to
@@ -123,10 +125,9 @@
                             </li>
                             {% endif %}
                         </ul>
-                    </li>
 
-                    {% endif %}
-                    <!-- Contacts -->
+                        {% endif %}
+                        <!-- Contacts -->
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-envelope"></i>
                             Contact</a>
@@ -192,8 +193,6 @@
             <p>&copy;
                 <script>document.write(new Date().getFullYear())</script> Yara beach
             </p>
-        </div>
-
         </div>
 
 
