--- a/templates/rentals/rentals.html
+++ b/templates/rentals/rentals.html
@@ -45,7 +45,7 @@
             </li>
             {% else %}
             <li class="page-item disabled">
-                <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Previous</a>
+                <div class="page-link" tabindex="-1" aria-disabled="true">Previous</div>
             </li>
             {% endif %}
 
@@ -76,7 +76,7 @@
                 </li>
                 {% else %}
                 <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Next</a>
+                    <div class="page-link" tabindex="-1" aria-disabled="true">Next</div>
                 </li>
                 {% endif %}
         </ul>
