--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -54,7 +54,7 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="links-container">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}"><i class="fa-solid fa-house-user"></i></i>
+                        <a class="nav-link" href="{% url 'home' %}"><i class="fa-solid fa-house-user"></i>
                             Home</a>
                     </li>
                     <!-- Sort by -->
@@ -64,8 +64,9 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
                             <i class="fa-solid fa-filter"></i>Sort by
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{% url 'newest_rentals_result' %}"></i>Sort by
-                                    newest</a></li>
+                            <li><a class="dropdown-item" href="{% url 'newest_rentals_result' %}">Sort by
+                                    newest</a>
+                            </li>
                             <li><a class="dropdown-item" href="{% url 'oldest_rentals_result' %}">Sort by Oldest</a>
                             </li>
                             <li><a class="dropdown-item" href="{% url 'filter_rentals_by_price_ascend' %}">Price
@@ -90,8 +91,7 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
                                         class="fa-solid fa-user"></i> Sign in</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="{% url 'account_signup' %}"><i
-                                        class="fa-solid fa-user-plus"></i> Register </a>
+                                <a class="dropdown-item" href="{% url 'account_signup' %}"><i class="fa-solid fa-user-plus"></i> Register </a>
                             </li>
                         </ul>
                     </li>
@@ -133,7 +133,6 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
                             </li>
                             {% endif %}
                         </ul>
-                    </li>
 
                     {% endif %}
                     <!-- Contacts -->
@@ -145,15 +144,13 @@ blue Caribbean, natural swimming pool, beautiful rooms, rent a whole apartment,
 
                     <!-- cart -->
                     <li class="nav-item cart">
-                        <a class="nav-link" href="{% url 'rental-cart' %}">
-                            <button type="button" class="btn my_hover sear-btn btn-outline-secondary position-relative">
+                        <a class="nav-link btn my_hover sear-btn btn-outline-secondary position-relative" href="{% url 'rental-cart' %}">
                                 <i class="fa-solid fa-cart-shopping"></i>
                                 {% if rental_cart_total %}
                                 £{{rental_cart_total | floatformat:2}}
                                 {% else %}
                                 £0.00
                                 {% endif %}
-                            </button>
                         </a>
                     </li>
                 </ul>
