--- a/templates/checkout/checkout.html
+++ b/templates/checkout/checkout.html
@@ -163,7 +163,10 @@
   // Wait for the DOM to be fully loaded
   document.addEventListener("DOMContentLoaded", function () {
     // Get the modal element
-    var myModal = new bootstrap.Modal(document.getElementById('exampleModal'));
+    var myModal = new bootstrap.Modal(document.getElementById('exampleModal'), {
+    backdrop: 'static',
+    keyboard: false
+     });
     // Show the modal
     myModal.show();
   });
